--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
   <title>FlickList</title>
 </head>
+	<meta charset="UTF-8">
+
 <body>
 
   <header>
@@ -30,7 +32,14 @@
   It should display "Browse Movies" in large text
   It should contain an empty unordered list
   -->
-  
+    <section id="section-browse">
+    <header>
+      <h2>Browse Movies</h2>
+      <hr/>
+    </header>
+
+    <ul></ul>
+  </section>
 
   <script src="js/flicklist.js"></script>
 
