--- a/index.html
+++ b/index.html
@@ -25,14 +25,13 @@
     <ul></ul>
   </section>
 
-  <!-- 
-  TODO 1
+  <!-- TODO 1
   Add another section, very similar to the one above, for the user to browse movies
   Give it an id of "section-browse"
   It should display "Browse Movies" in large text
   It should contain an empty unordered list
   -->
-    <section id="section-browse">
+  <section id="section-browse">
     <header>
       <h2>Browse Movies</h2>
       <hr/>
